--- a/index.html
+++ b/index.html
@@ -7,7 +7,14 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class = "grid"></div>
+    <div class = "body">
+        <div class = "buttonDiv">
+            <button class = "create">Create Grid</button>
+        </div>
+        <div class = "grid">
+        </div>
+    </div>
+
     <script src = "index.js" defer></script>
 </body>
 </html>
